--- a/Page Wire/Main.storyboard
+++ b/Page Wire/Main.storyboard
@@ -150,11 +150,12 @@
                         <outlet property="searchBar" destination="GMn-CC-ABO" id="zWF-sq-68a"/>
                         <outlet property="searchButton" destination="bI5-Tl-mjl" id="SrK-2V-a47"/>
                         <outlet property="segmentedControl" destination="36c-EW-zjW" id="fVy-iz-212"/>
+                        <segue destination="LOQ-z6-j0h" kind="show" id="JGK-JN-Ria"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5670.7692307692305" y="91.706161137440759"/>
+            <point key="canvasLocation" x="5671" y="92"/>
         </scene>
         <!--Book Results-->
         <scene sceneID="RTC-8L-UeK">
@@ -165,7 +166,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pda-ho-b4Q">
-                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="673"/>
                                 <color key="backgroundColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewLayout key="collectionViewLayout" id="E4n-JO-dfv" customClass="CenteredCollectionViewFlowLayout" customModule="CenteredCollectionView"/>
                                 <cells/>
@@ -184,22 +185,22 @@
                             <constraint firstItem="Pda-ho-b4Q" firstAttribute="top" secondItem="5GP-OP-jC9" secondAttribute="top" id="wYQ-Ut-57c"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Results" largeTitleDisplayMode="never" id="266-wj-box">
+                    <navigationItem key="navigationItem" title="Book Results" largeTitleDisplayMode="never" id="266-wj-box">
                         <barButtonItem key="backBarButtonItem" title=" " id="hRP-Lf-Dmk"/>
                     </navigationItem>
-                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="Pda-ho-b4Q" id="1hr-nZ-gnn"/>
+                        <segue destination="Gdz-b1-xkD" kind="show" id="7MT-l5-Mcd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v73-PD-FQ2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6602" y="-269"/>
+            <point key="canvasLocation" x="6752" y="92"/>
         </scene>
         <!--Book Info-->
         <scene sceneID="qvh-U0-Rgo">
             <objects>
-                <viewController storyboardIdentifier="BookInfoVC" title="Book Info" modalTransitionStyle="flipHorizontal" id="Nk9-rm-xV8" customClass="BookInfoVC" customModule="Page_Wire" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BookInfoVC" title="Book Info" modalPresentationStyle="pageSheet" id="Nk9-rm-xV8" customClass="BookInfoVC" customModule="Page_Wire" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RRe-yp-975">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -264,7 +265,57 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VSN-tA-xBH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7613.8461538461534" y="-269.43127962085305"/>
+            <point key="canvasLocation" x="9065" y="478"/>
+        </scene>
+        <!--Book Artwork-->
+        <scene sceneID="VAU-Ek-kvF">
+            <objects>
+                <viewController storyboardIdentifier="BookArtwork" title="Book Artwork" modalPresentationStyle="fullScreen" id="z1J-5c-I9Z" customClass="BookArtworkVC" customModule="Page_Wire" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pqE-kL-8So">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UzT-ez-PCn">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Knq-ZY-gD0">
+                                <rect key="frame" x="53" y="206" width="284" height="432"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hUY-WL-d0V"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UzT-ez-PCn" firstAttribute="bottom" secondItem="pqE-kL-8So" secondAttribute="bottom" id="EP8-Ud-gpa"/>
+                            <constraint firstItem="Knq-ZY-gD0" firstAttribute="centerY" secondItem="pqE-kL-8So" secondAttribute="centerY" id="I0q-Lk-a3B"/>
+                            <constraint firstItem="hUY-WL-d0V" firstAttribute="trailing" secondItem="UzT-ez-PCn" secondAttribute="trailing" id="L9x-zC-Yqd"/>
+                            <constraint firstItem="UzT-ez-PCn" firstAttribute="top" secondItem="pqE-kL-8So" secondAttribute="top" id="Lhe-dv-rrs"/>
+                            <constraint firstItem="Knq-ZY-gD0" firstAttribute="centerX" secondItem="pqE-kL-8So" secondAttribute="centerX" id="TTd-S5-BbL"/>
+                            <constraint firstItem="UzT-ez-PCn" firstAttribute="leading" secondItem="hUY-WL-d0V" secondAttribute="leading" id="fs5-Ri-D0u"/>
+                            <constraint firstItem="Knq-ZY-gD0" firstAttribute="width" secondItem="pqE-kL-8So" secondAttribute="width" multiplier="0.728205" id="prL-HY-z0C"/>
+                            <constraint firstItem="Knq-ZY-gD0" firstAttribute="height" secondItem="pqE-kL-8So" secondAttribute="height" multiplier="0.511848" id="vKL-eO-lpm"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="SWs-oV-0Da" appends="YES" id="uk6-GK-2xT"/>
+                        </connections>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="artwork" destination="Knq-ZY-gD0" id="SHU-7t-J48"/>
+                        <outlet property="backView" destination="UzT-ez-PCn" id="Y1z-YF-8iG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sbw-fU-WSe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="SWs-oV-0Da">
+                    <connections>
+                        <action selector="onArtworkPanned:" destination="z1J-5c-I9Z" id="pF1-eh-JX1"/>
+                    </connections>
+                </panGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="9066" y="-279"/>
         </scene>
         <!--Book Discovery Navigation-->
         <scene sceneID="gMy-p3-bdi">
@@ -417,7 +468,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pXe-aR-CYv">
-                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="673"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Gdz-b1-xkD" id="MGg-50-0be"/>
@@ -437,7 +488,6 @@
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Bzg-xN-xDb">
                         <barButtonItem key="backBarButtonItem" title=" " id="Fwx-KD-1BO"/>
                     </navigationItem>
-                    <nil key="simulatedTopBarMetrics"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
                     </userDefinedRuntimeAttributes>
@@ -447,7 +497,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ruV-WD-rjC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6602" y="425"/>
+            <point key="canvasLocation" x="7846" y="92"/>
         </scene>
         <!--Settings Navigation-->
         <scene sceneID="67Z-yz-X0T">
